hphp/hack/test/typecheck/instantiate_unresolved5.php.like_types.exp
File "instantiate_unresolved5.php", line 16, characters 10-18:
Invalid return type (Typing[4110])
File "instantiate_unresolved5.php", line 15, characters 31-45:
Expected ~array<array<T>> because it is an unenforceable type
File "instantiate_unresolved5.php", line 16, characters 10-18:
But got array<~array<T>>
